update Dougs twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ author: Doug Gapinski and Erik Runyon
 email:
 feed: /atom.xml
 authors:
-  doug: Doug Gapinski (<a href="http://www.twitter.com/thedougco/">@thedougco</a>)
+  doug: Doug Gapinski (<a href="http://www.twitter.com/DougGapinski/">@DougGapinski</a>)
   erik: Erik Runyon (<a href="http://www.twitter.com/erunyon/">@erunyon</a>)
 erik: "Erik Runyon"
 exclude:
